--- a/compose.yml
+++ b/compose.yml
@@ -8,8 +8,47 @@ services:
   extract-script:
     build: .
     networks:
-    - phelas-task-2
+      - phelas-task-2
     depends_on:
       - api-server
+      - mongo
+    develop:
+      watch:
+        - action: sync+restart
+          path: market_prices_analysis.py
+          target: market_prices_analysis.py
+    volumes:
+      - ./sheets:/data/sheets
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+        - "27017:27017"
+    networks:
+      - phelas-task-2
+    volumes:
+          - db-data:/data/db
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_BASICAUTH: false
+      ME_CONFIG_MONGODB_SERVER: mongo
+    networks:
+      - phelas-task-2
+    depends_on:
+      - mongo
+
 networks:
   phelas-task-2: {}
+volumes:
+  db-data:
+  sheets:
